# open-climate-service-examples

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
examples/01_discovery/: list_dataset_templates.py  list_datasets.py  list_processes.py  list_workflows.py  server_info.py  show_extent.py
examples/02_data_access/: export_netcdf.py  icechunk_direct.py  open_with_xarray.py  point_time_series.py  spatial_mean.py  zarr_subsetting.py
examples/03_openeo/: openeo_batch_job.py  openeo_connect.py  save_result_formats.py  store_and_run_udp.py  sync_result_raw_graph.py
examples/04_ingestion/: ingest_async_poll.py  ingest_dataset.py  list_ingestions.py  sync_forward.py  sync_plan.py
examples/05_dhis2/: aggregate_to_chap_csv.py  aggregate_to_dhis2.py  preview_org_unit.py
examples/06_http/: raw_httpx_discovery.py  sync_result_curl_equivalent.py
scripts/: e2e_docker.sh
src/ocs_examples/: __init__.py  config.py  connection.py  console.py  discovery.py  geometry.py  graphs.py  models.py
tests/: test_models.py  test_settings.py
tests/e2e/: conftest.py  test_era5_cds.py  test_examples_run.py  test_flow.py
